// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Silence /> matches snapshot when data is not present in alertStore 1`] = `
"
<div class=\\"m-1\\">
  <small class=\\"text-muted\\">
    Silenced by default/4cf5fd82-1edd-4169-99d1-ff8415e72179
  </small>
</div>
"
`;

exports[`<Silence /> matches snapshot when data is present in alertStore 1`] = `
"
<div class=\\"card mt-1 border-0 p-1\\">
  <div class=\\"card-text mb-0\\">
    <span class=\\"text-muted my-1\\">
      <span width=\\"0\\">
        <span>
        </span>
        <span>
          Fake silence
        </span>
        <span style=\\"position: fixed; visibility: hidden; top: 0px; left: 0px;\\">
          …
        </span>
      </span>
      <span class=\\"blockquote-footer pt-1\\">
        <span class=\\"float-right cursor-pointer\\">
          <div class
               style=\\"display: inline-block; max-width: 100%;\\"
               data-tooltipped
               aria-describedby=\\"tippy-tooltip-1\\"
               data-original-title=\\"Toggle silence details\\"
          >
            <svg aria-hidden=\\"true\\"
                 focusable=\\"false\\"
                 data-prefix=\\"fas\\"
                 data-icon=\\"chevron-up\\"
                 class=\\"svg-inline--fa fa-chevron-up fa-w-14 fa-null fa-rotate-null fa-pull-null \\"
                 role=\\"img\\"
                 xmlns=\\"http://www.w3.org/2000/svg\\"
                 viewbox=\\"0 0 448 512\\"
            >
              <path fill=\\"currentColor\\"
                    d=\\"M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z\\"
              >
              </path>
            </svg>
          </div>
        </span>
        <cite class=\\"components-grid-alertgroup-silences mr-2\\">
          me@example.com
        </cite>
        <span class=\\"badge badge-light nmb-05 align-bottom\\">
          Expires
          <time datetime=\\"946756800000\\">
            in 5 hours
          </time>
          <div class=\\"progress silence-progress bg-white\\">
            <div class=\\"progress-bar bg-success\\"
                 role=\\"progressbar\\"
                 style=\\"width: 50%;\\"
                 aria-valuenow=\\"50\\"
                 aria-valuemin=\\"0\\"
                 aria-valuemax=\\"100\\"
            >
            </div>
          </div>
        </span>
      </span>
    </span>
  </div>
</div>
"
`;

exports[`<Silence /> matches snapshot with expaned details 1`] = `
"
<div class=\\"card mt-1 border-0 p-1\\">
  <div class=\\"card-text mb-0\\">
    <span class=\\"text-muted my-1\\">
      <span width=\\"0\\">
        <span>
        </span>
        <span>
          Fake silence
        </span>
        <span style=\\"position: fixed; visibility: hidden; top: 0px; left: 0px;\\">
          …
        </span>
      </span>
      <span class=\\"blockquote-footer pt-1\\">
        <span class=\\"float-right cursor-pointer\\">
          <div class
               style=\\"display: inline-block; max-width: 100%;\\"
               data-tooltipped
               aria-describedby=\\"tippy-tooltip-5\\"
               data-original-title=\\"Toggle silence details\\"
          >
            <svg aria-hidden=\\"true\\"
                 focusable=\\"false\\"
                 data-prefix=\\"fas\\"
                 data-icon=\\"chevron-down\\"
                 class=\\"svg-inline--fa fa-chevron-down fa-w-14 fa-null fa-rotate-null fa-pull-null \\"
                 role=\\"img\\"
                 xmlns=\\"http://www.w3.org/2000/svg\\"
                 viewbox=\\"0 0 448 512\\"
            >
              <path fill=\\"currentColor\\"
                    d=\\"M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z\\"
              >
              </path>
            </svg>
          </div>
        </span>
        <cite class=\\"components-grid-alertgroup-silences mr-2\\">
          me@example.com
        </cite>
      </span>
    </span>
  </div>
  <div class=\\"mt-1\\">
    <div>
      <div class
           style=\\"display: inline-block; max-width: 100%;\\"
           data-tooltipped
           aria-describedby=\\"tippy-tooltip-6\\"
           data-original-title=\\"Click to only show alerts with this label or Alt+Click to hide them\\"
      >
        <span class=\\"components-label badge badge-warning components-label-dark components-label-with-hover\\">
          <span class=\\"components-label-name\\">
            @alertmanager:
          </span>
          <span class=\\"components-label-value\\">
            default
          </span>
        </span>
      </div>
      <a href=\\"file:///mock/#/silences/4cf5fd82-1edd-4169-99d1-ff8415e72179\\"
         target=\\"_blank\\"
         rel=\\"noopener noreferrer\\"
         class=\\"components-label components-label-with-hover badge mr-1 components-grid-annotation-link\\"
      >
        <svg aria-hidden=\\"true\\"
             focusable=\\"false\\"
             data-prefix=\\"fas\\"
             data-icon=\\"external-link-alt\\"
             class=\\"svg-inline--fa fa-external-link-alt fa-w-16 fa-null fa-rotate-null fa-pull-null \\"
             role=\\"img\\"
             xmlns=\\"http://www.w3.org/2000/svg\\"
             viewbox=\\"0 0 512 512\\"
        >
          <path fill=\\"currentColor\\"
                d=\\"M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z\\"
          >
          </path>
        </svg>
        4cf5fd82-1edd-4169-99d1-ff8415e72179
      </a>
    </div>
    <div>
      <span class=\\"badge px-1 mr-1 components-label\\">
        <svg aria-hidden=\\"true\\"
             focusable=\\"false\\"
             data-prefix=\\"fas\\"
             data-icon=\\"calendar-check\\"
             class=\\"svg-inline--fa fa-calendar-check fa-w-14 fa-null fa-rotate-null fa-pull-null text-muted mr-1\\"
             role=\\"img\\"
             xmlns=\\"http://www.w3.org/2000/svg\\"
             viewbox=\\"0 0 448 512\\"
        >
          <path fill=\\"currentColor\\"
                d=\\"M436 160H12c-6.627 0-12-5.373-12-12v-36c0-26.51 21.49-48 48-48h48V12c0-6.627 5.373-12 12-12h40c6.627 0 12 5.373 12 12v52h128V12c0-6.627 5.373-12 12-12h40c6.627 0 12 5.373 12 12v52h48c26.51 0 48 21.49 48 48v36c0 6.627-5.373 12-12 12zM12 192h424c6.627 0 12 5.373 12 12v260c0 26.51-21.49 48-48 48H48c-26.51 0-48-21.49-48-48V204c0-6.627 5.373-12 12-12zm333.296 95.947l-28.169-28.398c-4.667-4.705-12.265-4.736-16.97-.068L194.12 364.665l-45.98-46.352c-4.667-4.705-12.266-4.736-16.971-.068l-28.397 28.17c-4.705 4.667-4.736 12.265-.068 16.97l82.601 83.269c4.667 4.705 12.265 4.736 16.97.068l142.953-141.805c4.705-4.667 4.736-12.265.068-16.97z\\"
          >
          </path>
        </svg>
        Started
        <time datetime=\\"946720800000\\">
          5 hours ago
        </time>
      </span>
      <span class=\\"badge  px-1 mr-1 components-label\\">
        <svg aria-hidden=\\"true\\"
             focusable=\\"false\\"
             data-prefix=\\"fas\\"
             data-icon=\\"calendar-times\\"
             class=\\"svg-inline--fa fa-calendar-times fa-w-14 fa-null fa-rotate-null fa-pull-null text-muted mr-1\\"
             role=\\"img\\"
             xmlns=\\"http://www.w3.org/2000/svg\\"
             viewbox=\\"0 0 448 512\\"
        >
          <path fill=\\"currentColor\\"
                d=\\"M436 160H12c-6.6 0-12-5.4-12-12v-36c0-26.5 21.5-48 48-48h48V12c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v52h128V12c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v52h48c26.5 0 48 21.5 48 48v36c0 6.6-5.4 12-12 12zM12 192h424c6.6 0 12 5.4 12 12v260c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V204c0-6.6 5.4-12 12-12zm257.3 160l48.1-48.1c4.7-4.7 4.7-12.3 0-17l-28.3-28.3c-4.7-4.7-12.3-4.7-17 0L224 306.7l-48.1-48.1c-4.7-4.7-12.3-4.7-17 0l-28.3 28.3c-4.7 4.7-4.7 12.3 0 17l48.1 48.1-48.1 48.1c-4.7 4.7-4.7 12.3 0 17l28.3 28.3c4.7 4.7 12.3 4.7 17 0l48.1-48.1 48.1 48.1c4.7 4.7 12.3 4.7 17 0l28.3-28.3c4.7-4.7 4.7-12.3 0-17L269.3 352z\\"
          >
          </path>
        </svg>
        Expires
        <time datetime=\\"946756800000\\">
          in 5 hours
        </time>
      </span>
      <span class=\\"badge badge-secondary cursor-pointer components-label components-label-with-hover mr-1\\">
        <svg aria-hidden=\\"true\\"
             focusable=\\"false\\"
             data-prefix=\\"fas\\"
             data-icon=\\"edit\\"
             class=\\"svg-inline--fa fa-edit fa-w-18 fa-null fa-rotate-null fa-pull-null mr-1\\"
             role=\\"img\\"
             xmlns=\\"http://www.w3.org/2000/svg\\"
             viewbox=\\"0 0 576 512\\"
        >
          <path fill=\\"currentColor\\"
                d=\\"M402.6 83.2l90.2 90.2c3.8 3.8 3.8 10 0 13.8L274.4 405.6l-92.8 10.3c-12.4 1.4-22.9-9.1-21.5-21.5l10.3-92.8L388.8 83.2c3.8-3.8 10-3.8 13.8 0zm162-22.9l-48.8-48.8c-15.2-15.2-39.9-15.2-55.2 0l-35.4 35.4c-3.8 3.8-3.8 10 0 13.8l90.2 90.2c3.8 3.8 10 3.8 13.8 0l35.4-35.4c15.2-15.3 15.2-40 0-55.2zM384 346.2V448H64V128h229.8c3.2 0 6.2-1.3 8.5-3.5l40-40c7.6-7.6 2.2-20.5-8.5-20.5H48C21.5 64 0 85.5 0 112v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V306.2c0-10.7-12.9-16-20.5-8.5l-40 40c-2.2 2.3-3.5 5.3-3.5 8.5z\\"
          >
          </path>
        </svg>
        Edit
      </span>
      <span class=\\"badge badge-danger cursor-pointer components-label components-label-with-hover\\">
        <svg aria-hidden=\\"true\\"
             focusable=\\"false\\"
             data-prefix=\\"fas\\"
             data-icon=\\"trash\\"
             class=\\"svg-inline--fa fa-trash fa-w-14 fa-null fa-rotate-null fa-pull-null mr-1\\"
             role=\\"img\\"
             xmlns=\\"http://www.w3.org/2000/svg\\"
             viewbox=\\"0 0 448 512\\"
        >
          <path fill=\\"currentColor\\"
                d=\\"M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z\\"
          >
          </path>
        </svg>
        Delete
      </span>
    </div>
    <div class=\\"d-flex flex-row\\">
      <div class=\\"flex-shrink-0 flex-grow-0\\">
        <span class=\\"badge px-1 mr-1 components-label\\">
          <svg aria-hidden=\\"true\\"
               focusable=\\"false\\"
               data-prefix=\\"fas\\"
               data-icon=\\"filter\\"
               class=\\"svg-inline--fa fa-filter fa-w-16 fa-null fa-rotate-null fa-pull-null text-muted mr-1\\"
               role=\\"img\\"
               xmlns=\\"http://www.w3.org/2000/svg\\"
               viewbox=\\"0 0 512 512\\"
          >
            <path fill=\\"currentColor\\"
                  d=\\"M487.976 0H24.028C2.71 0-8.047 25.866 7.058 40.971L192 225.941V432c0 7.831 3.821 15.17 10.237 19.662l80 55.98C298.02 518.69 320 507.493 320 487.98V225.941l184.947-184.97C520.021 25.896 509.338 0 487.976 0z\\"
            >
            </path>
          </svg>
          Matchers:
        </span>
      </div>
      <div class=\\"flex-shrink-1 flex-grow-1\\"
           style=\\"min-width: 0px;\\"
      >
        <span class=\\"badge badge-light px-1 mr-1 components-label\\">
          alertname=MockAlert
        </span>
        <span class=\\"badge badge-light px-1 mr-1 components-label\\">
          instance=~foo[0-9]+
        </span>
      </div>
    </div>
  </div>
</div>
"
`;
